--- a/Web Dev/week2/Fav Artists.html
+++ b/Web Dev/week2/Fav Artists.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Fav Artist.css">
     <h1>Nahum's top 3 music Artists</h1>
 </head>
 <body>
