--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
     <div id= "header">
-        
+        <div class = "container">
+            <nav>
+                <img src="images/squad.jpeg" alt="logo">
+                <ul>
+                    <li><a href = "Home"> Home</a></li>
+                    <li><a href = "Home"> About</a></li>
+                    <li><a href = "Home"> Services</a></li>
+                    <li><a href = "Home"> Portfolio</a></li>
+                    <li><a href = "Home"> Contact</a></li>
+                </ul>
+            </nav>
     </div>
 </body>
 </html>
