--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -10,7 +10,7 @@
     <div id= "header">
         <div class = "container">
             <nav>
-                <img src="images/squad.jpeg" alt="logo">
+                <img src="images/demonp2.jpg" class="logo">
                 <ul>
                     <li><a href = "Home"> Home</a></li>
                     <li><a href = "Home"> About</a></li>
@@ -19,6 +19,18 @@
                     <li><a href = "Home"> Contact</a></li>
                 </ul>
             </nav>
+            <div class="header-text">
+                <p>Aspiring Game Dev</p>
+                <h1>Gday mate I'm <span>Nahum</span></h1>
+            </div>
+    </div>
+    <div id= "about">
+        <div class="container">
+            <div class="row">
+                <div class="about-cal-1"></div>
+                <div class="about-cal-2"></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
