--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--header section start-->
     <div id= "header">
         <div class = "container">
             <nav>
@@ -24,11 +25,22 @@
                 <h1>Gday mate I'm <span>Nahum</span></h1>
             </div>
     </div>
+    <!--header section end-->
+<!-------------about------------->
     <div id= "about">
         <div class="container">
             <div class="row">
-                <div class="about-cal-1"></div>
-                <div class="about-cal-2"></div>
+                <div class="about-col-1">
+                    <img src="images/IMG_3090.jpg">
+                </div>
+                <div class="about-col-2">
+                    <h1 class ="sub-titles">About Me</h1>
+                    <p>My name is Nahum, i want to go from simply playing games to making them</p>
+
+                    <div class="tab-titles">
+                        <p></p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
