--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -38,7 +38,16 @@
                     <p>My name is Nahum, i want to go from simply playing games to making them</p>
 
                     <div class="tab-titles">
-                        <p></p>
+                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                        <p class="tab-links" onclick="opentab('experience')"></p>">Experience</p>
+                        <p class="tab-links" onclick="opentab('education')">Education</p>
+                    </div>
+                    <div class="tab-contents active-tab" id="skills">
+                        <ul>
+                            <li><span>First Goal</span><br> as previously stated i want to learn how to create my own game</li>
+                            <li><span>Second Goal</span><br> make my own website</li>
+                            <li><span>Third Goal</span><br> create my own app</li>
+                        </ul>
                     </div>
                 </div>
             </div>
