--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -44,14 +44,44 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>First Goal</span><br> as previously stated i want to learn how to create my own game</li>
-                            <li><span>Second Goal</span><br> make my own website</li>
-                            <li><span>Third Goal</span><br>I want to create my own app</li>
+                            <li><span>Adaptable</span><br>learning new things and changing the way i do them isn't too difficult for me</li>
+                            <li><span>Python</span><br>ive learned a good amount so i'd like to think i've gotten decent at python</li>
+                            
+                        </ul>
+                    <div class="tab-contents"id="experience">
+                        <ul>
+                            <li><span>Experience</span><br> the only real experience i have with coding (outside of HGS) was once a long time ago that i don't really remeber, so much so the only thing i really remeber is that it happened</li>
+
+                        </ul>
+                    <div class="tab-contents"id="education">
+                        <ul>
+                            <li><span>Schools ive Learned From</span><br>i've gone to st. joseph elementary, middle, and currently at Middle College High School</li>
+                            <li><span>Levels of Math</span><br>i've learned Algebra, Geometry, and going to learn Algebra 2</li>
+                           
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <script>
+
+        var tablinks = document.getElementsByClassName("tab-links");
+        var tabcontents = document.getElementsByClassName("tab-contents");
+
+        function opentab(tabname){
+            for(tablink of tablinks){
+                tablink.classList.remove("active-link");
+            }
+            for(tabcontent of tabcontents){
+                tabcontent.classList.remove("active-tab");
+            }
+            event.currentTarget.classList.add("active-link")
+            document.getElementById(tabname)
+        }
+
+    </script>
+
 </body>
 </html>
