--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -64,7 +64,30 @@
             </div>
         </div>
     </div>
-
+<!---------------------services----------------->
+<div id="services">
+    <div class="container">
+        <h1 class ="sub-titles">My Services</h1>
+        <div class="services-list">
+            <div>
+                <h2>Web Design</h2>
+                <p>so you see this is where
+                the design of prolly the website finna be at</p>
+                <a href="#">learn more</a>
+            </div>            
+            <div>
+                <h2>App Design</h2>
+                <p>some other random yap</p>
+                <a href="#">learn more</a>
+            </div>
+            <div>
+                <h2>something else Design</h2>
+                <p>even more random yap</p>
+                <a href="#">learn more</a>
+            </div>
+        </div>
+    </div>
+</div>
     <script>
 
         var tablinks = document.getElementsByClassName("tab-links");
@@ -77,8 +100,8 @@
             for(tabcontent of tabcontents){
                 tabcontent.classList.remove("active-tab");
             }
-            event.currentTarget.classList.add("active-link")
-            document.getElementById(tabname)
+            event.currentTarget.classList.add("active-link");
+            document.getElementById(tabname).classList.add("active-tab");
         }
 
     </script>
