--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -81,8 +81,8 @@
                 <a href="#">learn more</a>
             </div>
             <div>
-                <h2>something else Design</h2>
-                <p>even more random yap</p>
+                <h2>Game Dev</h2>
+                <p>im trying to create something completely new, with its own everything modeled by my ideas and those ideas alone</p>
                 <a href="#">learn more</a>
             </div>
         </div>
