--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -48,18 +48,29 @@
                             <li><span>Python</span><br>ive learned a good amount so i'd like to think i've gotten decent at python</li>
                             
                         </ul>
-                    <div class="tab-contents"id="experience">
+                    </div>
+
+                    <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>Experience</span><br> the only real experience i have with coding (outside of HGS) was once a long time ago that i don't really remeber, so much so the only thing i really remeber is that it happened</li>
+                            <li><span>Experience</span><br>the only real experience i have with 
+                                coding (outside of HGS) was once a long time ago that i don't really 
+                                remeber, so much so the only thing i really 
+                                remeber is that it happened</li>
 
                         </ul>
-                    <div class="tab-contents"id="education">
+                    </div>
+
+                    <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>Schools ive Learned From</span><br>i've gone to st. joseph elementary, middle, and currently at Middle College High School</li>
-                            <li><span>Levels of Math</span><br>i've learned Algebra, Geometry, and going to learn Algebra 2</li>
+                            <li><span>Schools ive Learned From</span><br>i've gone to st. 
+                                joseph elementary, middle, and currently 
+                                at Middle College High School</li>
+                            <li><span>Levels of Math</span><br>i've learned Algebra,
+                                 Geometry, and going to learn Algebra 2</li>
                            
                         </ul>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -71,8 +82,9 @@
         <div class="services-list">
             <div>
                 <h2>Web Design</h2>
-                <p>so you see this is where
-                the design of prolly the website finna be at</p>
+                <p>the entire site you've been looking at, unsurprisingly
+                    was made by me
+                </p>
                 <a href="#">learn more</a>
             </div>            
             <div>
@@ -88,23 +100,23 @@
         </div>
     </div>
 </div>
-    <script>
+<script>
 
-        var tablinks = document.getElementsByClassName("tab-links");
-        var tabcontents = document.getElementsByClassName("tab-contents");
+    var tablinks = document.getElementsByClassName("tab-links");
+    var tabcontents = document.getElementsByClassName("tab-contents");
 
-        function opentab(tabname){
-            for(tablink of tablinks){
-                tablink.classList.remove("active-link");
-            }
-            for(tabcontent of tabcontents){
-                tabcontent.classList.remove("active-tab");
-            }
-            event.currentTarget.classList.add("active-link");
-            document.getElementById(tabname).classList.add("active-tab");
+    function opentab(tabname){
+        for(tablink of tablinks){
+            tablink.classList.remove("active-link");
         }
+        for(tabcontent of tabcontents){
+            tabcontent.classList.remove("active-tab");
+        }
+        event.currentTarget.classList.add("active-link");
+        document.getElementById(tabname).classList.add("active-tab");
+    }
 
-    </script>
+</script>
 
 </body>
 </html>
