--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nahum Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/91f11862c1.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--header section start-->
     <div id= "header">
         <div class = "container">
             <nav>
-                <img src="images/demonp2.jpg" class="logo">
+                <img src="images/how many wins.jpeg" class="logo">
                 <ul>
                     <li><a href = "Home"> Home</a></li>
                     <li><a href = "Home"> About</a></li>
@@ -81,15 +82,19 @@
         <h1 class ="sub-titles">My Services</h1>
         <div class="services-list">
             <div>
+                <i class="fa-solid fa-code"></i>
                 <h2>Web Design</h2>
                 <p>the entire site you've been looking at, unsurprisingly
-                    was made by me
+                    was made by me, so you know i atleast have some experience
                 </p>
                 <a href="#">learn more</a>
             </div>            
             <div>
                 <h2>App Design</h2>
-                <p>some other random yap</p>
+                <p>I will eventually create an app that will allow you to 
+                    register a picture of an animal and give it the species
+                    if possible give reccomendations to what you could name the animal
+                </p>
                 <a href="#">learn more</a>
             </div>
             <div>
