--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -12,7 +12,7 @@
     <div id= "header">
         <div class = "container">
             <nav>
-                <img src="images/how many wins.jpeg" class="logo">
+                <img src="images/work.jpg" class="logo">
                 <ul>
                     <li><a href = "Home"> Home</a></li>
                     <li><a href = "Home"> About</a></li>
@@ -87,24 +87,67 @@
                 <p>the entire site you've been looking at, unsurprisingly
                     was made by me, so you know i atleast have some experience
                 </p>
-                <a href="#">learn more</a>
+                <a href="#">Learn more</a>
             </div>            
             <div>
+                <i class="fa-solid fa-crop-alt"></i>
                 <h2>App Design</h2>
                 <p>I will eventually create an app that will allow you to 
                     register a picture of an animal and give it the species
                     if possible give reccomendations to what you could name the animal
                 </p>
-                <a href="#">learn more</a>
+                <a href="#">Learn more</a>
             </div>
             <div>
+                <i class="fa-brands fa-app-store"></i>
                 <h2>Game Dev</h2>
                 <p>im trying to create something completely new, with its own everything modeled by my ideas and those ideas alone</p>
-                <a href="#">learn more</a>
+                <a href="#">Learn more</a>
             </div>
         </div>
     </div>
 </div>
+<!------------------portfolio-------------->
+<div id="portfolio">
+    <div class="container">
+        <h1 class ="sub-titles">My Work</h1>
+        <div class="work-list">
+            <ul>
+                <div class="work">
+                    <li><img src="images/mean.jpeg"></li>
+                    <div class="layer">
+                        <h3>Karate</h3>
+                        <p>I did Karate for 5-6 years, long enough for me to 
+                            become a brown belt level 3 which is one level off
+                            becoming a black belt</p>
+                            <a href="#"><i class="fa-solid fa-trophy"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                <li><img src="images/boom.jpeg"></li>
+                <div class="layer">
+                        <h3>Karate</h3>
+                        <p>I did Karate for 5-6 years, long enough for me to 
+                            become a brown belt level 3 which is one level off
+                            becoming a black belt</p>
+                            <a href="#"><i class="fa-solid fa-trophy"></i></a>
+                </div>
+                </div>
+                <div class="work">
+                <li><img src="images/bang.jpeg"></li>
+                <div class="layer">
+                        <h3>Karate</h3>
+                        <p>I did Karate for 5-6 years, long enough for me to 
+                            become a brown belt level 3 which is one level off
+                            becoming a black belt</p>
+                            <a href="#"><i class="fa-solid fa-trophy"></i></a>
+                </div>
+                </div>
+            </ul>
+        </div>
+    </div>
+</div>
+
 <script>
 
     var tablinks = document.getElementsByClassName("tab-links");
