--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -114,7 +114,7 @@
         <div class="work-list">
             <ul>
                 <div class="work">
-                    <li><img src="images/mean.jpeg"></li>
+                    <li><img src="images/mean.png"></li>
                     <div class="layer">
                         <h3>Karate</h3>
                         <p>I did Karate for 5-6 years, long enough for me to 
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="work">
-                <li><img src="images/boom.jpeg"></li>
+                <li><img src="images/boom.png"></li>
                 <div class="layer">
                         <h3>Karate</h3>
                         <p>I did Karate for 5-6 years, long enough for me to 
@@ -134,7 +134,7 @@
                 </div>
                 </div>
                 <div class="work">
-                <li><img src="images/bang.jpeg"></li>
+                <li><img src="images/bang.png"></li>
                 <div class="layer">
                         <h3>Karate</h3>
                         <p>I did Karate for 5-6 years, long enough for me to 
