--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -118,29 +118,32 @@
                     <div class="layer">
                         <h3>Karate</h3>
                         <p>I did Karate for 5-6 years, long enough for me to 
-                            become a brown belt level 3 which is one level off
-                            becoming a black belt</p>
+                            become a brown belt level 3 which is one level from
+                            a black belt</p>
                             <a href="#"><i class="fa-solid fa-trophy"></i></a>
                     </div>
                 </div>
                 <div class="work">
                 <li><img src="images/boom.png"></li>
                 <div class="layer">
-                        <h3>Karate</h3>
-                        <p>I did Karate for 5-6 years, long enough for me to 
-                            become a brown belt level 3 which is one level off
-                            becoming a black belt</p>
-                            <a href="#"><i class="fa-solid fa-trophy"></i></a>
+                        <h3>Sports Experiences</h3>
+                        <p>back in middle school, i was on the basketball team and we were
+                            able to make it all the way too the finals matter of fact we actually
+                            won 1st place
+                        </p>
+                            <a href="#"><i class="fa-solid fa-medal"></i></i></a>
                 </div>
                 </div>
                 <div class="work">
                 <li><img src="images/bang.png"></li>
                 <div class="layer">
-                        <h3>Karate</h3>
-                        <p>I did Karate for 5-6 years, long enough for me to 
-                            become a brown belt level 3 which is one level off
-                            becoming a black belt</p>
-                            <a href="#"><i class="fa-solid fa-trophy"></i></a>
+                        <h3>Things ive Built</h3>
+                        <p>a while back i helped my dad build a chair, that still stands
+                            (although its too small for me to actually use now), and i
+                            played a rather big part in building the stand for our living
+                            room TV, it has a few cabinet sections that are used as storage
+                        </p>
+                            <a href="#"><i class="fa-solid fa-puzzle-piece"></i></i></a>
                 </div>
                 </div>
             </ul>
