--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -12,7 +12,7 @@
     <div id= "header">
         <div class = "container">
             <nav>
-                <img src="images/work.jpg" class="logo">
+                <img src="images/improved.png" class="logo">
                 <ul>
                     <li><a href = "Home"> Home</a></li>
                     <li><a href = "Home"> About</a></li>
