--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -23,7 +23,7 @@
             </nav>
             <div class="header-text">
                 <p>Aspiring Game Dev</p>
-                <h1>Gday mate I'm <span>Nahum</span></h1>
+                <h1>ello ppl this site was created by me <span>Nahum</span></h1>
             </div>
     </div>
     <!--header section end-->
@@ -55,8 +55,8 @@
                         <ul>
                             <li><span>Experience</span><br>the only real experience i have with 
                                 coding (outside of HGS) was once a long time ago that i don't really 
-                                remeber, so much so the only thing i really 
-                                remeber is that it happened</li>
+                                remember, so much so the only thing i really 
+                                remember is that it happened</li>
 
                         </ul>
                     </div>
