1hr 11 min mark

--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -148,8 +148,25 @@
                 </div>
             </ul>
         </div>
+        <a href="#" class="btn">gaze upon further contents</a>
     </div>
 </div>
+<!----------------contact---------------->
+<div id="contacts">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact Me</h1>
+                <p>nahum.michael@hgs.hiddengeniusproject.org</p>
+                <p></p>
+            </div>
+            <div class="contact-right"></div>
+        </div>
+    </div>
+</div>
+
+
+
 
 <script>
 
