--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -157,10 +157,22 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p>nahum.michael@hgs.hiddengeniusproject.org</p>
-                <p></p>
+                <p><i class="fa-solid fa-paper-plane"></i> nahum.michael@hgs.hiddengeniusproject.org</p>
+                <p><i class="fa-solid fa-phone"></i> 8667404531</p>
+                <div class="social-icons">
+                    <a href="https://instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://discord.com/"><i class="fa-brands fa-discord"></i></a>
+                </div>
+                <a href=" ">Download CV</a>
             </div>
-            <div class="contact-right"></div>
+            <div class="contact-right">
+                <form>
+                    <input type="text" name="Name" placeholder="Your Name" required>
+                    <input type="email" name="email" placeholder="Your Email" required>
+                    <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
         </div>
     </div>
 </div>
