even more progress

--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -163,14 +163,14 @@
                     <a href="https://instagram.com/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://discord.com/"><i class="fa-brands fa-discord"></i></a>
                 </div>
-                <a href=" ">Download CV</a>
+                <a href="images/what.jpeg" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form>
                     <input type="text" name="Name" placeholder="Your Name" required>
                     <input type="email" name="email" placeholder="Your Email" required>
                     <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                    <button type="submit">Submit</button>
+                    <button type="submit" class="btn btn2">Submit</button>
                 </form>
             </div>
         </div>
