--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -13,13 +13,15 @@
         <div class = "container">
             <nav>
                 <img src="images/improved.png" class="logo">
-                <ul>
+                <ul id="sidemenu">
                     <li><a href = "Home"> Home</a></li>
                     <li><a href = "Home"> About</a></li>
                     <li><a href = "Home"> Services</a></li>
                     <li><a href = "Home"> Portfolio</a></li>
                     <li><a href = "Home"> Contact</a></li>
+                    <i class="fa-solid fa-x" onclick="closemenu()"></i>
                 </ul>
+                <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
                 <p>Aspiring Game Dev</p>
@@ -148,7 +150,7 @@
                 </div>
             </ul>
         </div>
-        <a href="#" class="btn">gaze upon further contents</a>
+        <a href="#" class="btn">gaze upon ways to get into contact with me</a>
     </div>
 </div>
 <!----------------contact---------------->
@@ -175,6 +177,9 @@
             </div>
         </div>
     </div>
+    <div class="copyright">
+        <p>Copyright © Nahum. Made with <i class="fa-solid fa-ellipsis-vertical"></i> by Easy Tutorials</p>
+    </div>
 </div>
 
 
@@ -195,6 +200,12 @@
         event.currentTarget.classList.add("active-link");
         document.getElementById(tabname).classList.add("active-tab");
     }
+
+</script>
+
+<script>
+    
+    var sidemenu = document.getElementById("sidemenu")
 
 </script>
 
