--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -27,7 +27,7 @@
             </nav>
             <div class="header-text">
                 <p>Aspiring Game Dev</p>
-                <h1>ello ppl this site was created by me <span>Nahum</span></h1>
+                <h1>hello all, this website was created by<span>Nahum</span></h1>
             </div>
     </div>
     <!--header section end-->
@@ -181,7 +181,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>Copyright © Nahum. Made with <i class="fa-solid fa-ellipsis-vertical"></i> by Easy Tutorials</p>
+        <p>Copyright © Nahum made with <i class="fa-solid fa-ellipsis-vertical"></i> Easy Tutorials</p>
     </div>
 </div>
 
