--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -12,6 +12,7 @@
 
   <div class="curtain left-curtain"></div>
   <div class="curtain right-curtain"></div>
+
     <!--header section start-->
     <div id= "header">
         <div class = "container">
@@ -23,6 +24,10 @@
                     <li><a href = "#services"> Services</a></li>
                     <li><a href = "#portfolio"> Portfolio</a></li>
                     <li><a href = "#contact"> Contact</a></li>
+                    <!--------html <audio> Autoplay------------>
+<audio controls>
+    <source src="Audio/YG Marley - Praise Jah in the Moonlight (Official Music Video).mp3" type="audio/mpeg">
+</audio>
                 </ul>
             </nav>
             <div class="header-text">
@@ -152,7 +157,7 @@
                 </div>
             </ul>
         </div>
-        <a href="#" class="btn">gaze upon ways to get into contact with me</a>
+        <a href="#" class="btn">gaze upon ways to contact me</a>
     </div>
 </div>
 <!----------------contact---------------->
@@ -184,7 +189,6 @@
         <p>Copyright © Nahum made with <i class="fa-solid fa-ellipsis-vertical"></i> Easy Tutorials</p>
     </div>
 </div>
-
 
 
 
