--- a/Web Dev/Portfolio/index.html
+++ b/Web Dev/Portfolio/index.html
@@ -17,7 +17,7 @@
     <div id= "header">
         <div class = "container">
             <nav>
-                <img src="images/improved.png" class="logo">
+                <img src="images/attempted.png" class="logo">
                 <ul>
                     <li><a href = "#header"> Home</a></li>
                     <li><a href = "#about"> About</a></li>
@@ -123,7 +123,7 @@
         <div class="work-list">
             <ul>
                 <div class="work">
-                    <li><img src="images/mean.png"></li>
+                    <li><img src="images/IMG_3187.JPG"></li>
                     <div class="layer">
                         <h3>Karate</h3>
                         <p>I did Karate for 5-6 years, long enough for me to 
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="work">
-                <li><img src="images/boom.png"></li>
+                <li><img src="images/IMG_3186.PNG"></li>
                 <div class="layer">
                         <h3>Sports Experiences</h3>
                         <p>back in middle school, i was on the basketball team and we were
@@ -144,7 +144,7 @@
                 </div>
                 </div>
                 <div class="work">
-                <li><img src="images/bang.png"></li>
+                <li><img src="images/IMG_3188.jpg"></li>
                 <div class="layer">
                         <h3>Things ive Built</h3>
                         <p>a while back i helped my dad build a chair, that still stands
